[package]
authors = ["Roma Sokolov", "Alexander Zhuravlev"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface with the vl53l0x (time-to-flight sensor)"
documentation = "https://docs.rs/vl53l0x"
keywords = ["embedded-hal-driver", "range", "time-fo-flight", "distance"]
license = "MIT"
name = "vl53l0x"
repository = "https://github.com/copterust/vl53l0x"
version = "1.0.1"
edition = "2024"

[dependencies]
nb = "1.1"

[dependencies.hal]
version = "1.0"
package = "embedded-hal"
